Receive Data from master

--- a/platformio.ini
+++ b/platformio.ini
@@ -9,13 +9,15 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env:esp32dev]
+platform_packages = 
+	platformio/framework-arduinoespressif32 @ ~3.20009.0
 platform = espressif32
 board = esp32dev
 framework = arduino
 monitor_speed = 115200
 lib_deps = 
-	; madhephaestus/ESP32Servo@^0.13.0
-	; adafruit/Adafruit BusIO@^1.14.4
-	; adafruit/Adafruit MPU6050@^2.2.4
+	madhephaestus/ESP32Servo@^0.13.0
+	adafruit/Adafruit BusIO@^1.14.4
+	adafruit/Adafruit MPU6050@^2.2.4
 	pablomarquez76/PS4_Controller_Host@^1.0.6
 ; upload_port = COM7 //leave this on for auto decect port
