--- a/platformio.ini
+++ b/platformio.ini
@@ -16,8 +16,8 @@ board = esp32dev
 framework = arduino
 monitor_speed = 115200
 lib_deps = 
-	madhephaestus/ESP32Servo@^0.13.0
+	; madhephaestus/ESP32Servo@^0.13.0
 	; adafruit/Adafruit BusIO@^1.14.4
 	; adafruit/Adafruit MPU6050@^2.2.4
-	pablomarquez76/PS4_Controller_Host@^1.0.6
+	; pablomarquez76/PS4_Controller_Host@^1.0.6
 upload_port = COM6
